# genai-backend

./: .gitignore  Dockerfile  README.md  api_test.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: config.py  llama_cpp.py  main.py  prompt_templates.py
