[tool.poetry]
name = "genai-backend"
version = "0.1.0"
description = ""
authors = ["Subhomoy Roy Choudhury"]
readme = "README.md"
packages = [{include = "genai_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
langchain = "^0.0.331"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
